force-app/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <description>Object that relates Account to Resume for Professional and Educational experiences.</description>
    <label>Experience</label>
    <nameField>
        <displayFormat>X-{0000}</displayFormat>
        <label>Experience Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>