force-app/main/default/objects/Experience__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date of experience completion.</description>
    <inlineHelpText>Enter in the date completed (Day of month is not important).</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>