force-app/main/default/objects/Experience__c/fields/Completion_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Text__c</fullName>
    <description>Date of Experience record completion in Month Year format</description>
    <formula>CASE(MONTH(Completion_Date__c),
	1, &quot;January&quot;,
	2, &quot;February&quot;,
	3, &quot;March&quot;, 
	4, &quot;April&quot;, 
	5, &quot;May&quot;, 
	6, &quot;June&quot;,
	7, &quot;July&quot;,
	8, &quot;August&quot;,
	9, &quot;September&quot;,
	10, &quot;October&quot;,
	11, &quot;November&quot;,
	12, &quot;December&quot;,
	&quot;&quot;)
&amp;&quot; &quot;&amp;TEXT(YEAR(Completion_Date__c))</formula>
    <label>Completion Date</label>
    <type>Text</type>
</CustomField>