force-app/main/default/objects/Experience__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Professional Development course name.</description>
    <label>Course Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>