force-app/main/default/objects/Experience__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags whether the Professional experience record is currently occurring.</description>
    <inlineHelpText>Is this your current position?</inlineHelpText>
    <label>Current Position</label>
    <type>Checkbox</type>
</CustomField>