force-app/main/default/objects/Experience__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Rich-Text field contains the details on the experience.</description>
    <label>Description</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>