force-app/main/default/objects/Experience__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of the experience</description>
    <inlineHelpText>Enter in the end date of the experience (day of month is not important)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>