force-app/main/default/objects/Experience__c/fields/Experience_Span__c.field-meta.xml
<CustomField>
    <fullName>Experience_Span__c</fullName>
    <description>Formula field calculates the date range for an experience and returns it in Month (text) Year format.</description>
    <formula>CASE(MONTH(Start_Date__c),
	1, &quot;January&quot;,
	2, &quot;February&quot;,
	3, &quot;March&quot;, 
	4, &quot;April&quot;, 
	5, &quot;May&quot;, 
	6, &quot;June&quot;,
	7, &quot;July&quot;,
	8, &quot;August&quot;,
	9, &quot;September&quot;,
	10, &quot;October&quot;,
	11, &quot;November&quot;,
	12, &quot;December&quot;,
	&quot;&quot;)
&amp;&quot; &quot;&amp;TEXT(YEAR(Start_Date__c))
&amp; &quot; - &quot; &amp;
IF(
	ISBLANK(End_Date__c),
	&quot;Present&quot;,CASE(MONTH(End_Date__c),
	1, &quot;January&quot;,
	2, &quot;February&quot;,
	3, &quot;March&quot;, 
	4, &quot;April&quot;, 
	5, &quot;May&quot;, 
	6, &quot;June&quot;,
	7, &quot;July&quot;,
	8, &quot;August&quot;,
	9, &quot;September&quot;,
	10, &quot;October&quot;,
	11, &quot;November&quot;,
	12, &quot;December&quot;,
	&quot;&quot;) 
	&amp;&quot; &quot; &amp; TEXT(YEAR(End_Date__c))
)</formula>
    <label>Tenure</label>
    <type>Text</type>
</CustomField>