force-app/main/default/objects/Experience__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Experience location.</description>
    <inlineHelpText>Leave blank if the same as company address. This will be automatically populated.</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>