force-app/main/default/objects/Experience__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account record for the Experience.</description>
    <inlineHelpText>Enter in your Employer or Educational Institution.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>