force-app/main/default/objects/Experience__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Master lookup to the Resume record.</description>
    <inlineHelpText>Resume record this experience is related to.</inlineHelpText>
    <label>Resume</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>