force-app/main/default/objects/Experience__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the experience.</description>
    <inlineHelpText>Start date of the experience (day is not important).</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>