force-app/main/default/objects/Experience__c/recordTypes/Educational.recordType-meta.xml
<RecordType>
    <fullName>Educational</fullName>
    <active>true</active>
    <description>Educational Experience</description>
    <label>Educational</label>
</RecordType>