force-app/main/default/objects/Experience__c/recordTypes/Professional_Development.recordType-meta.xml
<RecordType>
    <fullName>Professional_Development</fullName>
    <active>true</active>
    <description>Professional training experience.</description>
    <label>Professional Development</label>
</RecordType>