force-app/main/default/objects/Experience__c/validationRules/Active_position_should_not_have_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_position_should_not_have_end_date</fullName>
    <active>true</active>
    <description>if the Current Position checkbox is enabled, the end date should be blank.</description>
    <errorConditionFormula>AND(
	RecordType.DeveloperName = &quot;Professional&quot;,	
	Current_Position__c = TRUE,
	NOT(ISBLANK(End_Date__c))
	)</errorConditionFormula>
    <errorMessage>The experience cannot be a current position and have an end date.</errorMessage>
</ValidationRule>